# ai-trend-collector

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: config.example.yaml
docs/: aihues-hot-article-pipeline-summary.md  outline-jotform-ai-app-builder.md  trend-to-article-workflow.md
scripts/: generate-aihues-articles.py  run.sh  validate-unsplash-covers.py
src/: main.py
src/bots/: feishu.py
src/core/: article_generator.py  base_spider.py  config.py  llm.py  models.py  ranker.py  storage.py
src/spiders/: arxiv_ai.py  github_trends.py  hacker_news_show.py  huggingface_papers.py  product_hunt.py
tests/: test_llm.py
